corrected demo url for mootools forge

--- a/package.yml
+++ b/package.yml
@@ -2,6 +2,6 @@ name: MooProgressBar
 author: Rocka84
 category: widgets
 tags: [progress]
-#docs: http://dillmeier.de/fabian/demos/MooProgressBar/index.html
-demo: http://dillmeier.de/fabian/demos/MooProgressBar/index.html
+#docs: http://fabian.dillmeier.de/demos/MooProgressBar/index.html
+demo: http://fabian.dillmeier.de/demos/MooProgressBar/index.html
 current: 1.0
